# test

./: .gitignore  CMakeLists.txt  README.md  a.html  calc  license  login.html  main  main.cpp  mul.cpp  my_app
.history/: .gitignore_20260323104618  CMakeLists_20260320161715.txt  CMakeLists_20260320170453.txt  a1_20260228103137.py  a_20260304152910.html  calc_20260320170705.h  calc_20260320171236.h  div_20260320171154.cpp  main_20260320161339.cpp  main_20260320170659.cpp  main_20260320171252.cpp
a1/: a1.py  hello
day/: 2023-03-04.py  2023-03-05.py  2023-03-09.md  2026-03-01.html  2026-03-06.md  2026-03-07.md  2026-03-10.md  2026-03-14.md
day/management/: m1.py
day/management/test_m/: test_m1.py
day/test_a/: a.py
include/: calc.h
src/: div.cpp  main.cpp  mainwindow.cpp  mainwindow.h
